renamed from CloudDeploy to AzDeploy

--- a/CloudDeployUI/frmMain.resx
+++ b/CloudDeployUI/frmMain.resx
@@ -156,4 +156,12 @@
         QmCC
 </value>
   </data>
+  <data name="tsbAddToProject.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAOCAYAAAAmL5yKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAB/SURBVDhPtY8xDoAgDEW9lIsz9/MGeAmcccdL6M7OhvlN
+        SiqBBFGbvPRT6EsY4ssiwTSPXdwEIYRH/CdYjYlKKQIZM2TZQVHAy957Op/HkWSSqgCXu3OUJbzEHTQL
+        MMupChat6YH8AktkB0UBYAnYrE3znKqgle8FPSRBf8V4ATYF2VwyT087AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
